# public/docs/api/swagger.json
@@ -43,6 +43,23 @@
         "responses": {
           "200": {
             "description": "The data"
+          },
+          "422": {
+            "description": "User already exists",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "message": {
+                      "type": "string",
+                      "description": "Message of return",
+                      "example": "User already exists"
+                    }
+                  }
+                }
+              }
+            }
           }
         }
       }
@@ -65,7 +82,30 @@
         ],
         "responses": {
           "200": {
-            "description": "The data"
+            "description": "Successfully logged out",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "access_token": {
+                      "type": "string",
+                      "description": "Message of return"
+                    },
+                    "token_type": {
+                      "type": "string",
+                      "description": "Message of return",
+                      "example": "bearer"
+                    },
+                    "expires_in_minutes": {
+                      "type": "integer",
+                      "description": "Expires in minutes",
+                      "example": 1440
+                    }
+                  }
+                }
+              }
+            }
           }
         }
       }
